latin/localstyle.css
@font-face {
    font-family: 'Doulos SIL WF';
    src: local("Doulos SIL"),
		url('/shared/webfonts/DoulosSIL-Rwebfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
	}

#shape { display: none; }
#alphabet { display: block; }




#alphabet img { 
	cursor: pointer; 
	}
span.hint {
	margin-right: 2px;
	}
	
#kbd { 	
	margin: auto; 
	}
#kbd table {
	margin:0;
	}
#kbd td {  
	margin: 0; 
	padding: 0; 
	padding-bottom: 3px; 
	text-align: left;
	font-size: 25px;
	cursor:pointer;
	vertical-align: top; 
	line-height: 1;
	}
#kbd td.hint {  
	font-size: 12px;
	color: #ccc;
	text-align: right;
	vertical-align: top;
	cursor:default;
	}
#kbd img {
	vertical-align: top;
	}


#kbd #predisposed { 
	width: 35px; 
	border: dotted 1px #999; 
	text-align: right; 
	padding-right: 4px; 
	vertical-align: middle; 
	}


#kbd #combining { 
	margin-top: 20px; 
	margin-bottom: 30px;
	/* width: 260px; 
	padding:5px 10px; */
	border: dotted 1px #999; 
	border-radius: 5px;
	}
#kbd #combining td {
	padding: 8px 0;
	}
#kbd #combining td.hint {
	padding: 5px 0;
	}
#kbd #moreconsonants {
	margin: 0 10px;
	}
	
#punctuation {
	text-align:right;
	}

#kbd #numbers {
	padding-left: 20px;
	}

#kbd #zwspcol {
	padding-left: 20px; 
	}

#rare td {
	text-align: left;
	vertical-align: middle;
	padding: 0;
	}
#rare td img {
	vertical-align: middle;
	margin: 0;
	}
.p {
	padding: 0 5px;
	}




#shape { padding-left: 5px; padding-right: 5px; margin: 20px; }
#shape li, #shape span, #shape img { border: 0; }
#shape ul { margin:0; padding:0; }
#shape span, #shape img { cursor:pointer; }
.shapelist { margin-bottom: 10px; }
.shapelist li { 
	position:relative;
	list-style-type: none;
	display: inline; 
	line-height: 48px;
	}
.shapelist .hidden { 
	position: absolute;
	top: 99%;
	left: -20px;
	width: 500px;
	font-size: 20px;
	line-height: 1.2em;
	text-align: center;
	z-index:1000;

	background-color:white; 
	border: 1px solid #CCC; 
	box-shadow: 7px 7px 5px #888; 
	padding: 5px 5px 5px 5px; 
	border-radius: 10px; 
	}

.shapelist li:hover .hidden { display:block; }
.shapelist li:hover .hidden img { display:inline; }

.shapelist span {  font-family: 'doulos sil', gentiumplus, code2000, serif; font-size:26px; line-height: 1.2em; }
/* #shape li {  padding-bottom:5px; } */


#fontgrid { 
	color: #808080; 
	background: white; 
	padding: 10px 20px;
	font-size: 30px;
	}
#fontgrid span { 
	cursor: pointer; 
	margin-right: 10px; 
	}
#fontgrid span:after { 
	content: '\200B ' ; /* zwsp */ 
	}


#extrashapes {
	text-align:center;
	margin-left: 3em;
	margin-right: 3em;
	}
#extrashapes span {
	cursor: pointer;
	}

